feat:find all players endpoint added WIP
