# api-rest/src/main/java/org/hexagonal/player/controller/PlayerController.java
@@ -6,10 +6,13 @@ import org.hexagonal.openapi.model.PlayerRequest;
 import org.hexagonal.openapi.model.PlayerResponse;
 import org.hexagonal.player.mapper.PlayerMapper;
 import org.hexagonal.player.model.Player;
+import org.hexagonal.player.ports.inbound.FindAllPlayerUseCase;
 import org.hexagonal.player.ports.inbound.FindPlayerUseCase;
 import org.hexagonal.player.ports.inbound.SavePlayerUseCase;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 @AllArgsConstructor
@@ -19,7 +22,14 @@ public class PlayerController implements PlayerApi {
 
     private final SavePlayerUseCase savePlayerUseCase;
 
+    private final FindAllPlayerUseCase findAllPlayerUseCase;
+
     private final PlayerMapper mapper;
+
+    @Override
+    public ResponseEntity<List<PlayerResponse>> allPlayers() {
+        return ResponseEntity.ok(mapper.toResponse(findAllPlayerUseCase.findAllPlayers()));
+    }
 
     @Override
     public ResponseEntity<PlayerResponse> playerInfo() {
