# api-rest/src/main/resources/openapi-rest.yaml
@@ -27,6 +27,15 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/200'
+  /multimodule-hexagonal/player/all:
+    get:
+      operationId: allPlayers
+      summary: get all players
+      tags:
+        - Player
+      responses:
+        '200':
+          $ref: '#/components/responses/Players200'
 
 components:
   schemas:
@@ -48,7 +57,8 @@ components:
       properties:
         identification:
           type: string
-          example: 1
+          format: UUID
+          example: 42028cf3-9884-4c52-b597-54e4a41f5716
         name:
           type: string
           example: Luis
@@ -60,8 +70,19 @@ components:
         - name
         - position
       additionalProperties: false
+    AllPlayersResponse:
+      type: array
+      items:
+        $ref: '#/components/schemas/PlayerResponse'
 
   responses:
+    Players200:
+      description: OK
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AllPlayersResponse'
+
     Player200:
       description: OK
       content:
